--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lru": "^3.1.0",
     "moment-timezone": "0.5.11",
     "react": "0.14.8 || ^15.1.0",
+    "valid-url": "1.0.9",
     "xgettext-js": "1.0.0"
   },
   "devDependencies": {
