--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "chai": "^3.5.0",
     "enzyme": "2.9.1",
     "mocha": "^2.4.5",
-    "react-dom": "0.14.8 || ^15.5.0",
+    "react-dom": "0.14.8 || ^15.5.0 || ^16.0.0",
     "react-test-env": "0.1.1",
     "react-test-renderer": "^15.5.0",
     "rewire": "^2.5.1"
