--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lru": "^3.1.0",
     "moment-timezone": "0.5.11",
     "react": "0.14.8 || ^15.5.0 || ^16.0.0",
+    "sha1": "^1.1.1",
     "xgettext-js": "^1.0.0"
   },
   "devDependencies": {
