Require React16 for testing

--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-adapter-react-helper": "^1.2.3",
     "mocha": "^2.4.5",
-    "react-dom": "0.14.8 || ^15.5.0 || ^16.0.0",
+    "react-dom": "^16.0.0",
     "react-test-env": "0.1.1",
-    "react-test-renderer": "^15.5.0 || ^16.0.0",
+    "react-test-renderer": "^16.0.0",
     "rewire": "^2.5.1"
   }
 }
