--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,12 @@
-machine:
-  node:
-    version: v6.1.0
+version: 2
+jobs:
+  docker:
+    - image: circleci/node:8.9.4-browsers
 
+workflows:
+  version: 2
+
+  build:
+    jobs:
+      - test
+      - lint
