--- a/.circleci/circle.yml
+++ b/.circleci/circle.yml
@@ -1,12 +1,11 @@
 version: 2
 jobs:
-  docker:
-    - image: circleci/node:6.13-browsers
-
-workflows:
-  version: 2
-
-  build:
-    jobs:
-      - lint
-      - test
+    build:
+        docker:
+            - image: circleci/node:8.9.4
+        steps:
+            - checkout
+            - run: echo "Hello World"
+            - run: npm install
+            - run: npm lint
+            - run: npm test
