--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lodash.assign": "^4.0.8",
     "lodash.flatten": "^4.4.0",
     "lru": "^3.1.0",
-    "moment-timezone": "0.5.11",
+    "moment-timezone": "^0.5.16",
     "react": "0.14.8 || ^15.5.0 || ^16.0.0",
     "xgettext-js": "^2.0.0"
   },
